--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,29 @@
     package="com.example.tours">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
+        android:name=".AppHelper.TokenStorage"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="com.example.tours.AppHelper.TokenStorage">
-        <activity android:name=".CreateTourActivity"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".CreateStopPoint"/>
+        <activity android:name=".CreateTourActivity" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBAaJwCvtDH1mzS_0VdenGZ_poviu6qshY"/>
 
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -43,8 +52,8 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home"></activity>
-        <activity android:name=".RegisterActivity"></activity>
+            android:label="@string/title_activity_home" />
+        <activity android:name=".RegisterActivity" />
     </application>
 
 </manifest>
