debug some bug of creating tour

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,15 +44,18 @@
             </intent-filter>
         </activity>
         <activity android:name=".CreateStopPointActivity">
+
+        </activity>
+        <activity
+            android:name=".HomeActivity"
+
+            android:label="@string/title_activity_home" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".HomeActivity"
-            android:label="@string/title_activity_home" />
         <activity android:name=".RegisterActivity" />
     </application>
 
