--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.ygaps.travelapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -8,25 +9,34 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.ygaps.travelapp.AppHelper.TokenStorage"
+        android:name=".AppHelper.TokenStorage"
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.ygaps.travelapp.VerifyCodeRecoveryPasswordActivity"></activity>
+        <activity android:name="com.ygaps.travelapp.VerifyCodeRecoveryPasswordActivity"/>
         <activity android:name="com.ygaps.travelapp.PasswordRecoveryActivity" />
 
         <receiver
-            android:name="com.ygaps.travelapp.Service.BroadcastLocationReceiver"
+            android:name=".Service.BroadcastLocationReceiver"
             android:enabled="true"
-            android:exported="true" />
+            android:exported="true"
+            tools:ignore="ExportedReceiver" />
 
         <service
-            android:name="com.ygaps.travelapp.Service.BackgroundLocationService"
+            android:name=".Service.BackgroundLocationService"
             android:enabled="true"
             android:exported="true" />
+        <service android:name=".Service.MyFirebaseMessagingService"
+            android:enabled="true"
+            >
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
         <activity android:name="com.ygaps.travelapp.UpdateTourActivity" />
         <activity
