+ draw flight path to stop point, service get member coordinate

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
             android:name=".Service.BroadcastLocationReceiver"
             android:enabled="true"
             android:exported="true"
-            tools:ignore="ExportedReceiver" />
+            >
+            <intent-filter>
+                <action android:name="@string/receiver_action_send_coordinate"/>
+            </intent-filter>
+        </receiver>
 
         <service
             android:name=".Service.BackgroundLocationService"
