--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,11 @@
             android:enabled="true"
             android:exported="true"
             >
-            <intent-filter>
+            <intent-filter android:priority="1000000">
                 <action android:name="@string/receiver_action_send_coordinate"/>
+            </intent-filter>
+            <intent-filter android:priority="1000000">
+                <action android:name="@string/receiver_action_send_notification_on_road"/>
             </intent-filter>
         </receiver>
 
