--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
+    implementation 'com.github.Inconnu08:android-ratingreviews:1.2.0'
 
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.libraries.places:places:1.1.0'
